# psh

./: .gitignore  AGENTS.md  ARCHITECTURE.llm  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  conftest.py  gate_attestation.json  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: claude.yml  nightly.yml  release-tag.yml  test_migration.yml  tests.yml
contract_tests_draft/: README.md  _helpers.py  conftest.py  test_job_control_contracts.py  test_process_substitution_contracts.py  test_redirection_contracts.py
docs/: boundary_phase_e_exit_2026-07-17.md  keyword_helper_cookbook.md  learning_path.md  missing_features.md  subsystem_internals.md  targeted_coverage_sprint_plan.md  test_pattern_guide.md  testing_source_of_truth.md
docs/architecture/: ast_data_flow.md  command_position.md  lexer_architecture.md  locale_service_design_2026-07-06.md  tour_of_psh_internals.md
docs/archive/: CHANGELOG_history.md  subsystem_internals.md
docs/guides/: builtins_public_api_assessment.md  combinator_parser_guide.md  combinator_parser_remaining_failures.md  core_public_api_assessment.md  executor_public_api_assessment.md  expansion_public_api_assessment.md  interactive_guide.md  interactive_public_api_assessment.md  io_redirect_guide.md  lexer_guide.md  parser_guide.md  parser_public_api.md  parser_public_api_assessment.md  visitor_public_api_assessment.md
docs/reviews/: README.md  architecture_feature_review_2026-06-09.md  boundary_campaign_close_2026-07.md  builtins_subsystem_appraisal_2026-07-06.md  code_architecture_teaching_quality_reassessment_2026-06-20.md  code_architecture_teaching_quality_review_2026-06-18.md  code_quality_assessment_2026-06-13.md  code_quality_subsystem_assessment_2026-06-11.md  code_quality_subsystem_reassessment_2026-06-11.md  code_quality_subsystem_reassessment_2026-06-12.md  codebase_appraisal_2026-07-04.md  codebase_recommendations_2026-02-17.md  codebase_study_2026-06-05.md  codebase_study_2026-06-05_phase1_correctness.md  codebase_study_2026-06-05_phase2_architecture.md  codebase_study_2026-06-05_phase3_coverage.md  combinator_diagnostic_characterization_2026-06-14.md  core_state_subsystem_appraisal_2026-07-06.md  execution_subsystem_improvement_plan_2026-07-05.md  executor_command_dispatch_architecture_review_2026-06-13.md  expansion_architecture_review_2026-06-13.md  expansion_subsystem_improvement_plan_2026-07-05.md  fresh_architecture_review_2026-06-14.md  ground_up_appraisal_2026-06-21.md  ground_up_reappraisal_10_2026-06-15.md  ground_up_reappraisal_11_2026-06-16.md  ground_up_reappraisal_12_2026-06-16.md  ground_up_reappraisal_13_2026-06-16.md  ground_up_reappraisal_14_2026-06-22.md  ground_up_reappraisal_15_2026-07-01.md  ground_up_reappraisal_16_2026-07-03.md  ground_up_reappraisal_17_2026-07-03.md  ground_up_reappraisal_18_2026-07-04.md  ground_up_reappraisal_19_textbook_2026-07-10.md  ground_up_reappraisal_2026-06-10.md  ground_up_reappraisal_2026-06-11.md  ground_up_reappraisal_2026-06-12.md  ground_up_reappraisal_2026-06-15.md  ground_up_reappraisal_5_2026-06-13.md  ground_up_reappraisal_6_2026-06-14.md  (+27 more)
docs/user_guide/: 01_introduction.md  02_getting_started.md  04_builtin_commands.md  05_variables_and_parameters.md  06_expansions.md  07_arithmetic.md  08_quoting_and_escaping.md  09_io_redirection.md  10_pipelines_and_lists.md  11_control_structures.md  14_interactive_features.md  16_advanced_features.md  17_differences_from_bash.md  18_troubleshooting.md  README.md  appendix_a_quick_reference.md  appendix_b_example_scripts.md  appendix_c_regex_reference.md  appendix_d_ascii_chart.md
examples/: README.md  control_structures.sh  fibonacci.sh  security_demo.sh  shell_basics.sh  text_stats.sh
psh/: __main__.py  arithmetic.py  ast_nodes.py  brace_expansion.py  functions.py  invocation.py  job_control.py  line_editor.py  line_layout.py  multiline_handler.py  shell.py  tab_completion.py  version.py
psh/ast_nodes/: __init__.py  arrays.py  base.py  commands.py  control.py  redirects.py  syntax_templates.py  tests.py  words.py
psh/builtins/: CLAUDE.md  __init__.py  aliases.py  array_init.py  base.py  command_builtin.py  core.py  debug_control.py  declaration_engine.py  declare_format.py  directory_stack.py  disown.py  env_command.py  environment.py  eval_command.py  function_support.py  hash_builtin.py  help_command.py  input_reader.py  io.py  job_control.py  kill_command.py  let_builtin.py  limits.py  loop_control.py  mapfile_builtin.py  navigation.py  parse_tree.py  parser_control.py  parser_experiment.py  positional.py  print_builtin.py  read_builtin.py  registry.py  shell_options.py  shell_state.py  signal_handling.py  source_command.py  system_builtins.py  test_command.py  (+1 more)
psh/core/: CLAUDE.md  __init__.py  assignment_utils.py  command_hash.py  environment.py  exceptions.py  execution_state.py  functions.py  getopts_state.py  history_state.py  internal_errors.py  job_state.py  locale_service.py  option_registry.py  options.py  process_lease.py  scope.py  scope_enhanced.py  special_registry.py  state.py  stream_bindings.py  terminal_state.py  trap_manager.py  variable_lookup.py  variable_store.py  variables.py
psh/executor/: CLAUDE.md  __init__.py  array.py  child_policy.py  command.py  command_assignments.py  command_resolution.py  command_resolver.py  context.py  control_flow.py  core.py  enhanced_test_evaluator.py  foreground_session.py  function.py  job_control.py  pipeline.py  process_launcher.py  strategies.py  subshell.py  test_evaluator.py
psh/expansion/: CLAUDE.md  __init__.py  _protocols.py  aliases.py  arithmetic.py  arrays.py  brace_expansion.py  brace_expansion_tokens.py  brace_expansion_words.py  command_sub.py  evaluator.py  extglob.py  fields.py  glob.py  manager.py  operands.py  (+11 more)
tests/: README.md  TEST_FRAMEWORK_IMPROVEMENTS.md  conftest.py  test_error_collection.py  test_parser_configuration.py  test_parser_feature_parity.py  test_parser_parity_basic.py  test_parser_visualization.py
tools/: gen_test_stats.py  pytest_phase_manifest.py  regen_lexer_corpus.py  verify_gate_attestation.py
(+944 files in other folders)
