[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psh"
dynamic = ["version"]
description = "Python Shell (psh) - An educational Unix shell implementation"
readme = "README.md"
authors = [
    {name = "Philip Wilson", email = "pgw@acm.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: System :: Shells",
]
keywords = ["shell", "unix", "education", "interpreter", "command-line"]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",
    "pyyaml",   # tests/behavioral golden-case loader
    "pexpect",  # tests/system/interactive PTY tier (collection-time import)
]

[project.urls]
Homepage = "https://github.com/philipwilsonTHG/psh"
Repository = "https://github.com/philipwilsonTHG/psh"
Issues = "https://github.com/philipwilsonTHG/psh/issues"

[project.scripts]
psh = "psh.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["psh", "psh.*"]

[tool.setuptools.package-data]
psh = ["*.md"]

[tool.setuptools.dynamic]
version = {attr = "psh.version.__version__"}

[tool.ruff]
target-version = "py312"
line-length = 120
# Archived/retired material is kept verbatim for historical reference and is not
# held to the live lint bar. The production gate is the explicit `ruff check psh
# tests` invocation (see CLAUDE.md); excluding the archive here lets a bare
# `ruff check .` also pass, so the configured command is honest.
extend-exclude = ["docs/archive"]

[tool.ruff.lint]
select = [
    "F401",   # unused imports
    "F811",   # redefined while unused
    "F841",   # unused variables
    "I",      # import sorting
    "W",      # pycodestyle warnings (whitespace, trailing, etc.)
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files use side-effect imports for registration
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["psh"]

[tool.mypy]
# Minimal, non-strict adoption: the `files` list below is the checked scope.
# Grow it module-by-module as annotations are cleaned up; keep new core/ code clean.
python_version = "3.12"
files = [
    "psh/__init__.py",
    "psh/__main__.py",
    "psh/core",
    "psh/ast_nodes",
    # R14.C: the last modules outside the type-checked scope (R13.C's
    # "tree-complete" claim was overstated). Now genuinely complete.
    "psh/parser/combinators/arrays.py",
    "psh/parser/combinators/diagnostics.py",
    "psh/expansion/brace_expansion_tokens.py",
    "psh/expansion/word_expansion_types.py",
    "psh/shell.py",
    "psh/version.py",
    # Scripting (whole package)
    "psh/scripting",
    # Visitor (whole package)
    "psh/visitor",
    # Executor (annotation-clean modules)
    "psh/executor/child_policy.py",
    "psh/executor/process_launcher.py",
    "psh/executor/context.py",
    "psh/executor/enhanced_test_evaluator.py",
    "psh/executor/function.py",
    "psh/executor/core.py",
    "psh/executor/array.py",
    "psh/executor/command_assignments.py",
    "psh/executor/strategies.py",
    "psh/executor/control_flow.py",
    "psh/executor/pipeline.py",
    "psh/executor/subshell.py",
    "psh/executor/command.py",
    "psh/executor/job_control.py",
    "psh/executor/__init__.py",
    # Expansion (annotation-clean modules)
    "psh/expansion/arithmetic",
    "psh/expansion/__init__.py",
    "psh/expansion/pattern.py",
    "psh/expansion/aliases.py",
    "psh/expansion/brace_expansion.py",
    "psh/expansion/command_sub.py",
    "psh/expansion/evaluator.py",
    "psh/expansion/extglob.py",
    "psh/expansion/glob.py",
    "psh/expansion/manager.py",
    "psh/expansion/param_parser.py",
    "psh/expansion/parameter_expansion.py",
    "psh/expansion/tilde.py",
    "psh/expansion/variable.py",
    "psh/expansion/_protocols.py",
    "psh/expansion/arrays.py",
    "psh/expansion/fields.py",
    "psh/expansion/operands.py",
    "psh/expansion/operators.py",
    "psh/expansion/word_expander.py",
    "psh/expansion/word_splitter.py",
    # I/O redirection (annotation-clean modules)
    "psh/io_redirect/planner.py",
    "psh/io_redirect/file_redirect.py",
    "psh/io_redirect/process_sub.py",
    "psh/io_redirect/manager.py",
    "psh/io_redirect/__init__.py",
    # Utils (annotation-clean modules)
    "psh/utils/__init__.py",
    "psh/utils/escapes.py",
    "psh/utils/ast_debug.py",
    "psh/utils/file_tests.py",
    "psh/utils/heredoc_detection.py",
    "psh/utils/printf_formatter.py",
    "psh/utils/token_formatter.py",
    "psh/utils/signal_utils.py",
    # Interactive (annotation-clean modules)
    "psh/interactive/__init__.py",
    "psh/interactive/line_editor.py",
    "psh/interactive/line_layout.py",
    "psh/interactive/edit_buffer.py",
    "psh/interactive/line_renderer.py",
    "psh/interactive/key_decoder.py",
    "psh/interactive/history_nav.py",
    "psh/interactive/base.py",
    "psh/interactive/keybindings.py",
    "psh/interactive/line_editor_helpers.py",
    "psh/interactive/multiline_handler.py",
    "psh/interactive/prompt.py",
    "psh/interactive/prompt_manager.py",
    "psh/interactive/history_expansion.py",
    "psh/interactive/history_manager.py",
    "psh/interactive/rc_loader.py",
    "psh/interactive/repl_loop.py",
    "psh/interactive/signal_manager.py",
    "psh/interactive/tab_completion.py",
    "psh/interactive/terminal.py",
    "psh/interactive/title.py",
    # Lexer (annotation-clean modules)
    "psh/lexer/pure_helpers.py",
    "psh/lexer/position.py",
    "psh/lexer/constants.py",
    "psh/lexer/token_parts.py",
    "psh/lexer/token_types.py",
    "psh/lexer/state_context.py",
    "psh/lexer/unicode_support.py",
    "psh/lexer/keyword_defs.py",
    "psh/lexer/keyword_normalizer.py",
    "psh/lexer/command_position.py",
    "psh/lexer/recognizers/base.py",
    "psh/lexer/recognizers/registry.py",
    "psh/lexer/recognizers/whitespace.py",
    "psh/lexer/recognizers/comment.py",
    "psh/lexer/recognizers/process_sub.py",
    "psh/lexer/recognizers/operator_debris.py",
    "psh/lexer/recognizers/operator.py",
    "psh/lexer/recognizers/literal.py",
    "psh/lexer/recognizers/word_scanners.py",
    "psh/lexer/recognizers/__init__.py",
    "psh/lexer/quote_parser.py",
    "psh/lexer/expansion_parser.py",
    "psh/lexer/heredoc_lexer.py",
    "psh/lexer/heredoc_collector.py",
    "psh/lexer/token_stream.py",
    "psh/lexer/cmdsub_scanner.py",
    "psh/lexer/modular_lexer.py",
    "psh/lexer/__init__.py",
    # Parser (annotation-clean modules)
    "psh/parser/config.py",
    "psh/parser/recursive_descent/base_context.py",
    "psh/parser/recursive_descent/context.py",
    "psh/parser/recursive_descent/helpers.py",
    "psh/parser/recursive_descent/support/utils.py",
    "psh/parser/recursive_descent/support/context_factory.py",
    "psh/parser/recursive_descent/support/word_builder.py",
    # Whole package (directory entry, not file-by-file) so a new sub-parser is
    # type-checked automatically — the old enumeration let base.py escape the
    # gate (reappraisal #16 Tier-2).
    "psh/parser/recursive_descent/parsers",
    "psh/parser/recursive_descent/support/__init__.py",
    "psh/parser/recursive_descent/parser.py",
    "psh/parser/recursive_descent/__init__.py",
    "psh/parser/__init__.py",
    "psh/parser/visualization/ascii_tree.py",
    "psh/parser/visualization/ast_formatter.py",
    "psh/parser/visualization/dot_generator.py",
    "psh/parser/visualization/sexp_renderer.py",
    "psh/parser/visualization/__init__.py",
    "psh/parser/combinators/core.py",
    "psh/parser/combinators/tokens.py",
    "psh/parser/combinators/utils.py",
    "psh/parser/combinators/heredoc_processor.py",
    "psh/parser/combinators/expansions.py",
    "psh/parser/combinators/special_commands.py",
    "psh/parser/combinators/commands/_constants.py",
    "psh/parser/combinators/commands/_protocols.py",
    "psh/parser/combinators/commands/redirections.py",
    "psh/parser/combinators/commands/simple.py",
    "psh/parser/combinators/commands/pipelines.py",
    "psh/parser/combinators/commands/statements.py",
    "psh/parser/combinators/commands/__init__.py",
    "psh/parser/combinators/parser.py",
    "psh/parser/combinators/__init__.py",
    "psh/parser/combinators/control_structures/_protocols.py",
    "psh/parser/combinators/control_structures/loops.py",
    "psh/parser/combinators/control_structures/conditionals.py",
    "psh/parser/combinators/control_structures/structures.py",
    "psh/parser/combinators/control_structures/__init__.py",
    # Builtins: whole package (directory entry, not file-by-file) so a new
    # builtin is type-checked automatically — the old enumeration let
    # loop_control.py escape the gate (reappraisal #16 Tier-2).
    "psh/builtins",
]
ignore_missing_imports = true
follow_imports = "silent"
allow_untyped_defs = true
allow_incomplete_defs = true
check_untyped_defs = false
warn_unused_ignores = true

# Per-package deepening: check the BODIES of un-annotated functions, package
# by package as each is cleaned up (the rest of psh keeps the global default
# `false`). See Tier R8.7 (core) and R9.B4 (expansion, executor).
[[tool.mypy.overrides]]
module = "psh.core.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.expansion.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.executor.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.io_redirect.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.lexer.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.visitor.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.builtins.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.utils.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.interactive.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.scripting.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.ast_nodes.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.parser.recursive_descent.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.parser.combinators.*"
check_untyped_defs = true

# Top-level package modules and the remaining parser modules (config,
# package __init__, visualization). Completes check_untyped_defs across the
# whole in-scope tree (R13.C).
[[tool.mypy.overrides]]
module = ["psh", "psh.__main__", "psh.shell", "psh.version"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["psh.parser", "psh.parser.config", "psh.parser.visualization", "psh.parser.visualization.*"]
check_untyped_defs = true
