[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psh"
dynamic = ["version"]
description = "Python Shell (psh) - An educational Unix shell implementation"
readme = "README.md"
authors = [
    {name = "Philip Wilson", email = "pgw@acm.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: System :: Shells",
]
keywords = ["shell", "unix", "education", "interpreter", "command-line"]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",
    "pyyaml",   # tests/behavioral golden-case loader
    "pexpect",  # tests/system/interactive PTY tier (collection-time import)
]

[project.urls]
Homepage = "https://github.com/philipwilsonTHG/psh"
Repository = "https://github.com/philipwilsonTHG/psh"
Issues = "https://github.com/philipwilsonTHG/psh/issues"

[project.scripts]
psh = "psh.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["psh", "psh.*"]

[tool.setuptools.package-data]
psh = ["*.md"]

[tool.setuptools.dynamic]
version = {attr = "psh.version.__version__"}

[tool.ruff]
target-version = "py312"
line-length = 120
# Archived/retired material is kept verbatim for historical reference and is not
# held to the live lint bar. The production gate is the explicit `ruff check psh
# tests` invocation (see CLAUDE.md); excluding the archive here lets a bare
# `ruff check .` also pass, so the configured command is honest.
extend-exclude = ["docs/archive"]

[tool.ruff.lint]
select = [
    "F401",   # unused imports
    "F811",   # redefined while unused
    "F841",   # unused variables
    "I",      # import sorting
    "W",      # pycodestyle warnings (whitespace, trailing, etc.)
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files use side-effect imports for registration
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["psh"]

[tool.mypy]
# The entire psh source tree is the type-checked scope. A single directory
# entry means every new module is picked up by the glob automatically and can
# never slip out of the gate (guarded by tests/unit/tooling/test_mypy_scope.py).
# Keep new code mypy-clean rather than carving files back out of scope.
python_version = "3.12"
files = [
    "psh",
]
ignore_missing_imports = true
follow_imports = "silent"
allow_untyped_defs = true
allow_incomplete_defs = true
check_untyped_defs = false
warn_unused_ignores = true

# Per-package deepening: check the BODIES of un-annotated functions, package
# by package as each is cleaned up (the rest of psh keeps the global default
# `false`). See Tier R8.7 (core) and R9.B4 (expansion, executor).
[[tool.mypy.overrides]]
module = "psh.core.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.expansion.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.executor.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.io_redirect.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.lexer.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.visitor.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.builtins.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.utils.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.interactive.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.scripting.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.ast_nodes.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.parser.recursive_descent.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psh.parser.combinators.*"
check_untyped_defs = true

# Top-level package modules and the remaining parser modules (config,
# package __init__, visualization). Completes check_untyped_defs across the
# whole in-scope tree (R13.C).
[[tool.mypy.overrides]]
module = ["psh", "psh.__main__", "psh.shell", "psh.version"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["psh.parser", "psh.parser.config", "psh.parser.visualization", "psh.parser.visualization.*"]
check_untyped_defs = true
